Work in progress - Menus

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
          <i class="material-icons menu-icon">menu</i>
 
          <ul class="menu">
-            <li><a href="#">Our Products</a>
+            <li><a id="product-btn" href="#">Our Products</a>
                <ul class="drop-menu">
-                  <li><a href="https://www.hustlerturf.com/" target="_blank">Hustler Turf Equipment</a></li>
-                  <li><a href="http://www.bigdogmowerco.com/" target="_blank">BigDog Mower Co.</a></li>
+                  <li><a href="https://www.hustlerturf.com/">Hustler Turf Equipment</a></li>
+                  <li><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
                </ul>
             </li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="https://www.hustlerturf.com/info/employment" target="_blank">Careers</a></li>
+            <li><a href="https://www.hustlerturf.com/info/employment">Careers</a></li>
          </ul>
       </nav>
 
