Adding about section - wip

--- a/index.html
+++ b/index.html
@@ -29,10 +29,19 @@
                <li><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
             </ul>
          </li>
-         <li><a href="#">About Us</a></li>
+         <li><a id="about-btn" href="#">About Us</a></li>
          <li><a href="https://www.hustlerturf.com/info/employment">Careers</a></li>
       </ul>
    </nav>
+
+   <section class="about-container">
+      <div id="american-innovation">
+         <img src="img/american-innovation.svg" alt="American Innovation" />
+      </div>
+      <p>
+         In 1964, Excel Industries introduced the Hustler as the worlds first zero-turn mower. That spirit of innovation continues today as Excel sets the standard in crafting and creating the most innovative outdoor power equipment on the market. Developing new products and improving existing ones is a source of pride for the Midwest craftsmen and women at Excel industries. And it’s that pride, plus hard work and ingenuity that all comes together to create the strongest, highest performing, and best quality zero-turn mowers and utility vehicles in the industry.
+      </p>
+   </section>
 
    <div class="overlay"></div>
 
