--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
          <a href="index.html"><img src="img/logo.svg" alt="" /></a>
       </div>
 
-      <i class="material-icons menu-icon open">menu</i>
+      <i class="material-icons menu-icon toggle">menu</i>
 
       <ul class="menu">
-         <li><a id="product-btn" href="#">Our Products</a>
-            <ul class="drop-menu">
-               <li><a href="https://www.hustlerturf.com/">Hustler Turf Equipment</a></li>
-               <li><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
+         <li class="toggle"><a id="product-btn" href="#">Our Products</a>
+            <ul class="dropMenu">
+               <li class="content"><a href="https://www.hustlerturf.com/">Hustler Turf Equipment</a></li>
+               <li class="content"><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
             </ul>
          </li>
-         <li><a id="about-btn" href="#">About Us</a></li>
+         <li><a class="about-btn" href="#">About Us</a></li>
          <li><a href="https://www.hustlerturf.com/info/employment">Careers</a></li>
       </ul>
    </nav>
@@ -48,14 +48,14 @@
 
    <section class="hero-container">
       <img id="hero" src="img/hero.svg" alt="Proud manufacturer of Hustler Turf Equipment &amp; BigDog Mower Co." />
-      <a class="button" href="#">Read More</a>
+      <a class="button about-btn" href="#">Read More</a>
    </section>
 
 
 
 
 
-<script src="js/jquery-3.0.0.min.js" type="text/javascript"></script>
+<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
