All jQuery interactions are working

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 
    <nav>
       <div class="logo">
-         <a href="index.html"><img src="img/logo.svg" alt="" /></a>
+         <img src="img/logo.svg" alt="" />
       </div>
 
       <i class="material-icons menu-icon toggle">menu</i>
 
       <ul class="menu">
-         <li class="toggle"><a id="product-btn" href="#">Our Products</a>
+         <li class="toggle product-btn"><a href="#">Our Products</a>
             <ul class="dropMenu">
                <li class="content"><a href="https://www.hustlerturf.com/">Hustler Turf Equipment</a></li>
                <li class="content"><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
             </ul>
          </li>
-         <li><a class="about-btn" href="#">About Us</a></li>
-         <li><a href="https://www.hustlerturf.com/info/employment">Careers</a></li>
+         <li class="about-btn"><a class="about-btn" href="#">About Us</a></li>
+         <li class="careers-btn"><a href="https://www.hustlerturf.com/info/employment">Careers</a></li>
       </ul>
    </nav>
 
