--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 </head>
 <body>
 
-
-
-
-
    <nav>
       <div class="logo">
          <img src="img/logo.svg" alt="" />
@@ -38,23 +34,18 @@
       <div id="american-innovation">
          <img src="img/american-innovation.svg" alt="American Innovation" />
       </div>
-      <p>In 1964, Excel Industries introduced the Hustler as the worlds first zero-turn mower. That spirit of innovation continues today as Excel sets the standard in crafting and creating the most innovative outdoor power equipment on the market.</p>
-      <p>Developing new products and improving existing ones is a source of pride for the Midwest craftsmen and women at Excel industries. And it’s that pride, plus hard work and ingenuity that all comes together to create the strongest, highest performing, and best quality zero-turn mowers and utility vehicles in the industry.</p>
+      <p>In 1964, Excel Industries introduced <span class="italic">The Hustler</span> as the first zero-turn mower. That spirit of innovation continues today as Excel Industries sets the standard in crafting and creating innovative outdoor power equipment products for the Hustler Turf Equipment and BigDog Mower Co. product lines in Hesston, Kansas.</p>
+      <p>Developing new products and improving existing ones is a source of pride for the Midwest craftsmen and women at Excel Industries. And it’s that pride, plus hard work and ingenuity, that all comes together as we strive to create the most innovative and best-in-class outdoor power equipment solutions in the industry.</p>
    </section>
 
    <div class="overlay"></div>
-
 
    <section class="hero-container">
       <img id="hero" src="img/hero.svg" alt="Proud manufacturer of Hustler Turf Equipment &amp; BigDog Mower Co." />
       <a class="button about-btn" href="#">Read More</a>
    </section>
 
-
-
-
-
-<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-<script src="js/script.js" type="text/javascript"></script>
+   <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+   <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
