--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    <nav>
       <div class="logo">
-         <img src="img/logo.svg" alt="" />
+         <img src="img/logo.svg" alt="Excel Industries Logo" />
       </div>
 
       <i class="material-icons menu-icon toggle">menu</i>
