add space after The Hustler italics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="american-innovation">
          <img src="img/american-innovation.svg" alt="American Innovation" />
       </div>
-      <p>In 1964, Excel Industries introduced <span class="italic">The Hustler</span> as the first zero-turn mower. That spirit of innovation continues today as Excel Industries sets the standard in crafting and creating innovative outdoor power equipment products for the Hustler Turf Equipment and BigDog Mower Co. product lines in Hesston, Kansas.</p>
+      <p>In 1964, Excel Industries introduced <span class="italic">The Hustler &nbsp;</span> as the first zero-turn mower. That spirit of innovation continues today as Excel Industries sets the standard in crafting and creating innovative outdoor power equipment products for the Hustler Turf Equipment and BigDog Mower Co. product lines in Hesston, Kansas.</p>
       <p>Developing new products and improving existing ones is a source of pride for the Midwest craftsmen and women at Excel Industries. And it’s that pride, plus hard work and ingenuity, that all comes together as we strive to create the most innovative and best-in-class outdoor power equipment solutions in the industry.</p>
    </section>
 
