remove unnecessary classes

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
          <img src="img/logo.svg" alt="Excel Industries Logo" />
       </div>
 
-      <i class="material-icons menu-icon toggle">menu</i>
+      <i class="material-icons menu-icon">menu</i>
 
       <ul class="menu">
-         <li class="toggle product-btn"><a href="#">Our Products</a>
+         <li class="product-btn"><a href="#">Our Products</a>
             <ul class="dropMenu">
-               <li class="content"><a href="https://www.hustlerturf.com/">Hustler Turf Equipment</a></li>
-               <li class="content"><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
+               <li><a href="https://www.hustlerturf.com/">Hustler Turf Equipment</a></li>
+               <li><a href="http://www.bigdogmowerco.com/">BigDog Mower Co.</a></li>
             </ul>
          </li>
          <li class="about-btn"><a class="about-btn" href="#">About Us</a></li>
